# guardian-bed_treehacks

./: .gitignore  FINAL_COMPLETE_DATA_ALL_SENSORS.json  README.md  api_server.py  data_merger.py  main.py  sample_transcripts.json
data_logs/: data_2026-02-12_15.jsonl  data_2026-02-13_22.jsonl  data_2026-02-14_02.jsonl  data_2026-02-14_03.jsonl  data_2026-02-14_14.jsonl  data_2026-02-14_18.jsonl  data_2026-02-14_20.jsonl  data_2026-02-15_03.jsonl  data_2026-02-15_04.jsonl  data_2026-02-15_05.jsonl
hardware/hand_module/: hand_module_wifi.ino
live_data/: merged_data.json
pipeline/: config.py  pipeline.py
pipeline/readers/: bed_reader.py  hand_reader.py  hand_reader_bt.py  radar_reader.py
pipeline/storage/: file_logger.py  time_series_db.py
raspberry_pi/: radar_monitor.py  voice_transcriber.py
vitalguard-software/: experiment_results.json  requirements.txt  test_guidelines.md
vitalguard-software/alerts/: alert_manager.py  email_notifier.py
vitalguard-software/analysis/: posture.py  pressure.py  repositioning.py  risk_engine.py  sound.py  vitals.py
vitalguard-software/api/: routes.py  server.py  ws_handler.py
vitalguard-software/config/: patient_profiles.py  settings.py
vitalguard-software/dashboard/: vitalguard.html
vitalguard-software/data/: hw_adapter.py  hw_simulator.py  voice_agent.py  writer.py
vitalguard-software/experiments/: run_live.py  (+1 more)
voiceagent/: .gitignore  pyproject.toml
voiceagent/data/: sample.json
voiceagent/src/voiceagent/: __init__.py  cli.py  meds.py  pipeline.py  priority.py  roles.py  schemas.py  segment.py  summarize.py
(+28 files in other folders)
